Added Day 2 Project and contact details

--- a/Inktober/resources/styles.css
+++ b/Inktober/resources/styles.css
@@ -33,6 +33,17 @@ h1 {
   width: auto;
 }
 
+.text-center {
+  text-align: center;
+}
+
+.img-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 .center {
   margin: auto;
   width: 60%;
